--- a/public/css/style.css
+++ b/public/css/style.css
@@ -87,6 +87,7 @@ nav a:hover {
 .post {
   flex: 4;
   background-color: #fff;
+  z-index: 1;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -200,6 +201,7 @@ img {
 }
 
 .background {
+  z-index: -2;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -256,8 +258,12 @@ img {
 }
 
 h2 {
-  padding: 15px;
+  padding: 0px;
+  color: var(--light);
+  font-family: "Griffy";
+  font-size: 30px;
 }
+
 .character-abilities {
   flex: 1;
   display: flex;
@@ -292,16 +298,18 @@ h2 {
   align-items: center;
   max-width: 800px;
   margin: 0 auto;
+  /* z-index: 2; */
 }
 
 #question {
   background-color: #333;
   border: 2px solid #444;
   border-radius: 5px;
-  width: 400px;
+  width: 300px;
   color: white;
-  padding: 20px;
-  margin: 20px 0;
+  padding: 10px;
+  margin: 10px 0;
+  font-size: 15px;
 }
 
 .question-display {
@@ -323,7 +331,7 @@ button {
   border: none;
   border-radius: 5px;
   padding: 10px 20px;
-  margin: 10px;
+  margin: 5px;
   cursor: pointer;
   transition: background-color 0.3s;
 }
@@ -342,25 +350,29 @@ button:hover {
   margin-top: 20px;
   cursor: pointer;
   transition: background-color 0.3s;
+  font-family: "Griffy";
 }
 
 #startquiz:hover {
   background-color: #00ff00;
 }
 
-.question-section {
-  width: 50%;
-  position: absolute;
-  top: 300px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
 .input {
   color: var(--light);
   font-family: "Griffy";
-  font-size: 30px;
+  font-size: 20px;
+  /* z-index: auto; */
+}
+
+#nameInput {
+  width: calc(var(--card-height) / 2);
+  display: flex;
+  flex-direction: column;
+  padding: 10px;
+}
+
+#raceDropdown {
+  padding: 10px;
 }
 
 .select {
@@ -389,12 +401,138 @@ button:hover {
   height: 50vh;
 }
 
+@property --rotate {
+  syntax: "<angle>";
+  initial-value: 132deg;
+  inherits: false;
+}
+
+:root {
+  --card-height: 65vh;
+  --card-width: calc(var(--card-height) / 1.5);
+}
+
+.magiccard {
+  width: 50vw;
+  background: #191c29;
+  width: var(--card-width);
+  height: var(--card-height);
+  padding: 3px;
+  position: absolute;
+  top: 300px;
+  border-radius: 6px;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  font-size: 1.5em;
+  color: rgb(88 199 250 / 0%);
+  cursor: pointer;
+  font-family: cursive;
+}
+
+/* .question-section {
+  background-color: rgb(55, 3, 3);
+  width: 50%;
+  position: absolute;
+  top: 300px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+} */
+
+/* .magiccard:hover {
+  color: rgb(88 199 250 / 100%);
+  transition: color 1s;
+}
+.magiccard:hover:before,
+.magiccard:hover:after {
+  animation: none;
+  opacity: 0;
+} */
+
+.magiccard::before {
+  content: "";
+  width: 104%;
+  height: 102%;
+  border-radius: 8px;
+  background-image: linear-gradient(
+    var(--rotate),
+    #ffb65d,
+    #e33c3c 43%,
+    #0e0221
+  );
+  position: absolute;
+  z-index: -1;
+  top: -1%;
+  left: -2%;
+  animation: spin 2.5s linear infinite;
+}
+
+.magiccard::after {
+  position: absolute;
+  content: "";
+  top: calc(var(--card-height) / 6);
+  left: 0;
+  right: 0;
+  z-index: -1;
+  height: 100%;
+  width: 100%;
+  margin: 0 auto;
+  transform: scale(0.8);
+  filter: blur(calc(var(--card-height) / 6));
+  background-image: linear-gradient(
+    var(--rotate),
+    #5ddcff,
+    #3c67e3 43%,
+    #4e00c2
+  );
+  opacity: 1;
+  transition: opacity 0.5s;
+  animation: spin 2.5s linear infinite;
+}
+
+@keyframes spin {
+  0% {
+    --rotate: 0deg;
+  }
+  100% {
+    --rotate: 360deg;
+  }
+}
+
 @media screen and (max-width: 1170px) {
   h1 {
     font-size: 30px;
     text-align: center;
     font-family: "Griffy";
     /* font-weight: bold; */
+  }
+
+h2 {
+  font-size: 20px;
+}
+#nameInput {
+  width: calc(var(--card-height) / 3);
+}
+
+.input {
+  font-size: 15px;
+  /* z-index: auto; */
+}
+
+#question {
+  width: 250px;
+  margin: 5px;
+  padding: 5px;
+}
+  
+ :root {
+  --card-height: 70vh;
+  --card-width: calc(var(--card-height) / 2);
+}
+
   }
 
   .background {
