--- a/public/css/style.css
+++ b/public/css/style.css
@@ -90,6 +90,7 @@ nav a:hover {
   display: flex;
   flex-direction: column;
   align-items: center;
+  z-index: 1;
 }
 
 .btn-no-style {
@@ -455,6 +456,7 @@ button:hover {
     height: 100vh;
     object-fit: cover;
     object-position: 70%;
+    z-index: -2;
   }
 
   .btn-no-style {
