--- a/public/css/style.css
+++ b/public/css/style.css
@@ -87,10 +87,10 @@ nav a:hover {
 .post {
   flex: 4;
   background-color: #fff;
+  z-index: 1;
   display: flex;
   flex-direction: column;
   align-items: center;
-  z-index: 1;
 }
 
 .btn-no-style {
@@ -149,6 +149,8 @@ img {
   border-width: thick;
   background-image: linear-gradient(rgb(16, 15, 15), rgb(243, 6, 6));
   color: var(--light);
+  display: flex;
+  flex-direction: column;
 }
 
 .card header {
@@ -201,6 +203,7 @@ img {
 }
 
 .background {
+  z-index: -2;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -257,8 +260,12 @@ img {
 }
 
 h2 {
-  padding: 15px;
+  padding: 0px;
+  color: var(--light);
+  font-family: "Griffy";
+  font-size: 30px;
 }
+
 .character-abilities {
   flex: 1;
   display: flex;
@@ -293,16 +300,18 @@ h2 {
   align-items: center;
   max-width: 800px;
   margin: 0 auto;
+  /* z-index: 2; */
 }
 
 #question {
   background-color: #333;
   border: 2px solid #444;
   border-radius: 5px;
-  width: 400px;
+  width: 300px;
   color: white;
-  padding: 20px;
-  margin: 20px 0;
+  padding: 10px;
+  margin: 10px 0;
+  font-size: 15px;
 }
 
 .question-display {
@@ -324,7 +333,7 @@ button {
   border: none;
   border-radius: 5px;
   padding: 10px 20px;
-  margin: 10px;
+  margin: 5px;
   cursor: pointer;
   transition: background-color 0.3s;
 }
@@ -343,25 +352,29 @@ button:hover {
   margin-top: 20px;
   cursor: pointer;
   transition: background-color 0.3s;
+  font-family: "Griffy";
 }
 
 #startquiz:hover {
   background-color: #00ff00;
 }
 
-.question-section {
-  width: 50%;
-  position: absolute;
-  top: 300px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
 .input {
   color: var(--light);
   font-family: "Griffy";
-  font-size: 30px;
+  font-size: 20px;
+  /* z-index: auto; */
+}
+
+#nameInput {
+  width: calc(var(--card-height) / 2);
+  display: flex;
+  flex-direction: column;
+  padding: 10px;
+}
+
+#raceDropdown {
+  padding: 10px;
 }
 
 .select {
@@ -389,6 +402,57 @@ button:hover {
 .character-card-image {
   height: 50vh;
 }
+
+@property --rotate {
+  syntax: "<angle>";
+  initial-value: 132deg;
+  inherits: false;
+}
+
+:root {
+  --card-height: 65vh;
+  --card-width: calc(var(--card-height) / 1.5);
+}
+
+.magiccard {
+  width: 50vw;
+  background: #191c29;
+  width: var(--card-width);
+  height: var(--card-height);
+  padding: 3px;
+  position: absolute;
+  top: 300px;
+  border-radius: 6px;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  font-size: 1.5em;
+  color: rgb(88 199 250 / 0%);
+  cursor: pointer;
+  font-family: cursive;
+}
+
+/* .question-section {
+  background-color: rgb(55, 3, 3);
+  width: 50%;
+  position: absolute;
+  top: 300px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+} */
+
+/* .magiccard:hover {
+  color: rgb(88 199 250 / 100%);
+  transition: color 1s;
+}
+.magiccard:hover:before,
+.magiccard:hover:after {
+  animation: none;
+  opacity: 0;
+} */
 
 .magiccard::before {
   content: "";
@@ -448,18 +512,40 @@ button:hover {
     /* font-weight: bold; */
   }
 
-  .background {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    width: 100vw;
-    height: 100vh;
-    object-fit: cover;
-    object-position: 70%;
-    z-index: -2;
+  h2 {
+    font-size: 20px;
+  }
+  #nameInput {
+    width: calc(var(--card-height) / 3);
   }
 
-  .btn-no-style {
-    padding: 20px 14px;
+  .input {
+    font-size: 15px;
+    /* z-index: auto; */
   }
+
+  #question {
+    width: 250px;
+    margin: 5px;
+    padding: 5px;
+  }
+
+  :root {
+    --card-height: 70vh;
+    --card-width: calc(var(--card-height) / 2);
+  }
+}
+
+.background {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100vw;
+  height: 100vh;
+  object-fit: cover;
+  object-position: 70%;
+}
+
+.btn-no-style {
+  padding: 20px 14px;
 }
