--- a/public/css/style.css
+++ b/public/css/style.css
@@ -312,6 +312,7 @@ h2 {
   padding: 10px;
   margin: 10px 0;
   font-size: 15px;
+  /* font-family: "Griffy"; */
 }
 
 .question-display {
@@ -325,6 +326,8 @@ h2 {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
+  font-size: 15px;
+  /* font-family: "Griffy"; */
 }
 
 button {
@@ -378,6 +381,7 @@ button:hover {
 }
 
 .select {
+  font-size: 15px;
   width: 100px;
 }
 
@@ -514,14 +518,22 @@ button:hover {
 
   h2 {
     font-size: 20px;
+    margin: 0;
   }
+
   #nameInput {
     width: calc(var(--card-height) / 3);
+    padding: 5px;
   }
 
   .input {
     font-size: 15px;
+    margin: 5px;
     /* z-index: auto; */
+  }
+
+  #raceDropdown {
+    padding: 5px;
   }
 
   #question {
