--- a/public/css/style.css
+++ b/public/css/style.css
@@ -545,11 +545,22 @@ button:hover {
     --card-width: calc(var(--card-height) / 2);
   }
 
+  .character-template h2 {
+    color: var(--light);
+    font-family: "Griffy";
+    /* background-image: url('../asset/bb1.png'); */
+    font-size: 1em;
+  }
+
   .character-stats {
     display: flex;
     flex-direction: column;
   }
 
+  .character-abilities {
+    display: flex;
+    flex-direction: row;
+  }
   .character-info {
     padding: 20px;
     display: flex;
