--- a/public/css/style.css
+++ b/public/css/style.css
@@ -217,7 +217,8 @@ img {
   font-weight: bold;
 }
 .character-template {
-  background-image: url("../asset/background-image.png");
+  position: absolute;
+  top: 250px;
   background-size: cover;
   width: 100vw;
   height: 100vh;
@@ -394,6 +395,7 @@ button:hover {
   flex-direction: row;
   justify-content: space-around;
   height: 100%;
+  z-index: 1;
 }
 
 .character-card-stats {
@@ -401,8 +403,23 @@ button:hover {
   flex-direction: column;
   justify-content: space-around;
 }
+
 .character-card-image {
   height: 50vh;
+}
+
+.background {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100vw;
+  height: 100vh;
+  object-fit: cover;
+  object-position: 70%;
+}
+
+.btn-no-style {
+  padding: 20px 14px;
 }
 
 @property --rotate {
@@ -417,7 +434,6 @@ button:hover {
 }
 
 .magiccard {
-  width: 50vw;
   background: #191c29;
   width: var(--card-width);
   height: var(--card-height);
@@ -435,26 +451,6 @@ button:hover {
   cursor: pointer;
   font-family: cursive;
 }
-
-/* .question-section {
-  background-color: rgb(55, 3, 3);
-  width: 50%;
-  position: absolute;
-  top: 300px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-} */
-
-/* .magiccard:hover {
-  color: rgb(88 199 250 / 100%);
-  transition: color 1s;
-}
-.magiccard:hover:before,
-.magiccard:hover:after {
-  animation: none;
-  opacity: 0;
-} */
 
 .magiccard::before {
   content: "";
@@ -475,6 +471,126 @@ button:hover {
 }
 
 .magiccard::after {
+  position: absolute;
+  content: "";
+  top: calc(var(--card-height) / 6);
+  left: 0;
+  right: 0;
+  z-index: -1;
+  height: 100%;
+  width: 100%;
+  margin: 0 auto;
+  transform: scale(0.8);
+  filter: blur(calc(var(--card-height) / 6));
+  background-image: linear-gradient(
+    var(--rotate),
+    #5ddcff,
+    #3c67e3 43%,
+    #4e00c2
+  );
+  opacity: 1;
+  transition: opacity 0.5s;
+  animation: spin 2.5s linear infinite;
+}
+
+.magiccard2 {
+  background: #191c29;
+  width: var(--card-width);
+  height: var(--card-height);
+  padding: 3px;
+  position: absolute;
+  top: 100px;
+  border-radius: 6px;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  font-size: 1.5em;
+  color: rgb(88 199 250 / 0%);
+  cursor: pointer;
+  font-family: cursive;
+}
+
+.magiccard2::before {
+  content: "";
+  width: 104%;
+  height: 102%;
+  border-radius: 8px;
+  background-image: linear-gradient(
+    var(--rotate),
+    #ffb65d,
+    #e33c3c 43%,
+    #0e0221
+  );
+  position: absolute;
+  z-index: -1;
+  top: -1%;
+  left: -2%;
+  animation: spin 2.5s linear infinite;
+}
+
+.magiccard2::after {
+  position: absolute;
+  content: "";
+  top: calc(var(--card-height) / 6);
+  left: 0;
+  right: 0;
+  z-index: -1;
+  height: 100%;
+  width: 100%;
+  margin: 0 auto;
+  transform: scale(0.8);
+  filter: blur(calc(var(--card-height) / 6));
+  background-image: linear-gradient(
+    var(--rotate),
+    #5ddcff,
+    #3c67e3 43%,
+    #4e00c2
+  );
+  opacity: 1;
+  transition: opacity 0.5s;
+  animation: spin 2.5s linear infinite;
+}
+
+.magiccard3 {
+  background: #191c29;
+  /* width: 40vw; */
+  /* height: 40vh; */
+  padding: 3px;
+  margin: 5px;
+  position: relative;
+  border-radius: 6px;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  font-size: 1.5em;
+  color: rgb(88 199 250 / 0%);
+  cursor: pointer;
+  font-family: cursive;
+}
+
+.magiccard3::before {
+  content: "";
+  width: 104%;
+  height: 102%;
+  border-radius: 8px;
+  background-image: linear-gradient(
+    var(--rotate),
+    #5ddcff,
+    #3c67e3 43%,
+    #4e00c2
+  );
+  position: absolute;
+  z-index: -1;
+  top: -1%;
+  left: -2%;
+  animation: spin 2.5s linear infinite;
+}
+
+.magiccard3::after {
   position: absolute;
   content: "";
   top: calc(var(--card-height) / 6);
@@ -551,18 +667,24 @@ button:hover {
     /* background-image: url('../asset/bb1.png'); */
     font-size: 1em;
   }
+  .magiccard2 {
+    top: 200px;
+  }
 
   .character-stats {
     display: flex;
     flex-direction: column;
+    margin: 5px;
   }
 
   .character-abilities {
+    width: 100vw;
     display: flex;
     flex-direction: row;
+    flex-grow: grow;
   }
   .character-info {
-    padding: 20px;
+    padding: 5px;
     display: flex;
     justify-content: space-evenly;
   }
@@ -571,18 +693,14 @@ button:hover {
     width: 49%;
     text-align: center;
   }
-}
 
-.background {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  width: 100vw;
-  height: 100vh;
-  object-fit: cover;
-  object-position: 70%;
-}
-
-.btn-no-style {
-  padding: 20px 14px;
+  .character-card {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    height: 100%;
+  }
+  .character-card-stats p {
+    margin: 0;
+  }
 }
