--- a/views/character.handlebars
+++ b/views/character.handlebars
@@ -1,4 +1,5 @@
 <!-- Character Template -->
+<img class="background" src="/asset/background-image.png">
 <div class="character-template">
   <div class="strong character-info">
     <h2
@@ -17,7 +18,7 @@
       <h2 class="character-intelligence box-outline">Intelligence: {{character.class.intelligence}}</h2>
       <h2 class="character-dexterity box-outline">Dexterity: {{character.class.dexterity}}</h2>
     </div>
-    <div class="character-image-section" ><img src="{{character.class.image}}" /> </div>
+    <div class="character-image-section magiccard2" ><img src="{{character.class.image}}" /> </div>
     <div class="character-abilities">
         <h2 class="character-hp fb box-outline">Hit Points: {{character.class.hit_points}}</h2>
       <h2 class="character-wisdom box-outline">Wisdom: {{character.class.wisdom}}</h2>
