--- a/views/partials/character-details.handlebars
+++ b/views/partials/character-details.handlebars
@@ -1,4 +1,4 @@
-<section class="card">
+<div class="card">
   <a class="card-anchor" href="/api/character/{{id}}">
     <header>{{character_name}}</header>
     <div class="character-card">
@@ -10,9 +10,9 @@
         <p><strong>Hit Points:</strong> {{class.hit_points}}</p>
         <p><strong>Date Created:</strong> {{format_time createdAt}}</p>
       </div>
-      <div>
+      <div class="magiccard3">
         <img class="character-card-image" src="{{class.image}}" />
       </div>
     </div>
   </a>
-</section>
+</div>
