--- a/public/css/style.css
+++ b/public/css/style.css
@@ -622,7 +622,7 @@ button:hover {
   }
 }
 
-@media screen and (max-width: 1200px) {
+@media screen and (max-width: 390vw) {
   h1 {
     font-size: 30px;
     text-align: center;
