--- a/views/form.handlebars
+++ b/views/form.handlebars
@@ -7,7 +7,7 @@
       <div id="nameInput">
         <label class="input" for="name">Character Name:</label>
       </div>
-      <input type="text" id="name" name="name" required />
+      <input class="input" type="text" id="name" name="name" required />
       <!-- Race Dropdown -->
       <div id="raceDropdown">
         <label class="input" for="race">Select your character's race:</label>
