size for mobile

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -687,6 +687,7 @@ button:hover {
     flex-grow: grow;
   }
   .character-info {
+    margin: 10px;
     padding: 5px;
     display: flex;
     justify-content: space-evenly;
